syntax = "proto3";

package validators;

import "codec.proto";
import "gogoproto/gogo.proto";

// ApplyDiffMsg is designed to update validator power
message ApplyDiffMsg {
  weave.Metadata metadata = 1;
  repeated weave.ValidatorUpdate validator_updates = 2 [(gogoproto.nullable) = false];
}

// Accounts is a list of accounts allowed to update validators
message Accounts {
  weave.Metadata metadata = 1;
  repeated bytes addresses = 2;
}
